--- a/style.css
+++ b/style.css
@@ -35,29 +35,34 @@ body {
   border: 4px solid black;
 }
 .new_game_btn {
-  margin: 2rem 0;
-  align-items: center;
+  background-color: #2c2c7a;
   border: none;
-  padding: 1rem 4rem;
-  background-color: coral;
-  outline: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
   cursor: pointer;
-  height: 6rem;
-  width: 30rem;
-  text-transform: uppercase;
-  font-size: 2rem;
-  font-weight: bolder;
-  cursor: pointer;
+  width: 80vw;
+  border-radius: 5%;
+  margin: 1rem 1rem;
 }
 
 .new_game_btn:hover {
-  background-color: rgba(0, 0, 0, 0.4);
+  opacity: 1
 }
 .win {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin: auto;
-  color: yellow;
+  width: 100%;
+  text-transform: uppercase;
+  color:#2c2c7a;
   padding: 10rem;
   font-weight: bold;
   font-size: 5rem;
@@ -77,7 +82,7 @@ body {
 }
 @keyframes flip {
   from {
-    rotate: -10deg;
+    rotate: -5deg;
   }
   to {
     rotate: 0deg;
@@ -86,6 +91,7 @@ body {
 .square:hover{
   animation-name: flip;
   animation-duration: 0.5s;
+animation-timing-function: ease-in-out;
   animation-iteration-count: 1;
 }
 @keyframes keyframeWidth {
